test/conformance/chainsaw/validate/clusterpolicy/standard/audit/background-match-clusterRoles/manifests.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: background-match-clusterroles
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: ns-clusterroles
    match:
      any:
      - resources:
          kinds:
            - Pod
        clusterRoles:
          - foo-admin
    validate:
      message: The `owner` label is required for all Namespaces.
      pattern:
        metadata:
          labels:
            owner: "?*"
