test/conformance/chainsaw/validate/clusterpolicy/standard/audit/background-match-clusterRoles/chainsaw-step-02-error-1-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: background-match-clusterroles
spec:
  background: true
  rules:
  - match:
      any:
      - clusterRoles:
        - foo-admin
        resources:
          kinds:
          - Pod
    name: ns-clusterroles
    validate:
      failureAction: Audit
      message: The `owner` label is required for all Namespaces.
      pattern:
        metadata:
          labels:
            owner: ?*
