test/conformance/chainsaw/validate/clusterpolicy/standard/audit/background-match-clusterRoles/01-script-check-for-output.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: script-check-for-output
spec:
  timeouts: {}
  try:
  - script:
      content: "if kubectl apply -f manifests.yaml 2>&1 | grep -q 'invalid variable
        used' \nthen \n    echo \"Test succeeded. The phrase 'invalid variable used'
        is found.\"\n    exit 0\nelse \n    echo \"Test failed. The phrase 'invalid
        variable used' has not been found.\"\n    exit 1\nfi\n"
